rm .idea + rm checkstyle.xml